--- a/alexandria/app/build.gradle
+++ b/alexandria/app/build.gradle
@@ -37,5 +37,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'me.dm7.barcodescanner:zbar:1.8.3'
 
 }
