--- a/FootballScores/app/build.gradle
+++ b/FootballScores/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "FOOTBALL_API_KEY", FOOTBALL_API_KEY
     }
     buildTypes {
         release {
