--- a/FootballScores/app/src/main/AndroidManifest.xml
+++ b/FootballScores/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ScoresApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -34,7 +35,7 @@
                 android:value=".ui.scores.MainActivity" />
         </activity>
 
-        <service android:name=".api.UpdateScoreService" />
+        <service android:name=".api.ScoresUpdateService" />
 
         <receiver android:name=".ui.widget.ScoresAppWidget">
             <intent-filter>
